--- a/index.html
+++ b/index.html
@@ -1,10 +1,169 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+<head>
+  <meta charset="UTF-8">
+  <title>Оно тебе надо</title>
+
+  <link rel="stylesheet" href="styles/fonts.css">
+  <link rel="stylesheet" href="styles/globals.css">
+  <link rel="stylesheet" href="styles/styles.css">
+</head>
+
+<body>
+  <!-- Шапка -->
+  <header class="header">
+    <nav class="header__menu">
+      <ul class="header__links-list">
+        <li class="header__links-list-item header__links-list-item_no-bullit">
+          <a class="header__link header__link_active">главная</a>
+        </li>
+        <li class="header__links-list-item">
+          <a class="header__link">посмотреть лоты</a>
+        </li>
+        <li class="header__links-list-item">
+          <a class="header__link">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+
+    <a class="header__logo">
+      <img src="images/logo.svg" alt="Логотип ОНО ТЕБЕ НАДО" class="header__logo-image">
+    </a>
+
+    <address class="address header__address">
+      <a href="tel:+99995555555">+9 999 555 5555</a>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p>наб. Принсенграхт 263-265, Амстердам</p>
+    </address>
+  </header>
+
+  <main>
+    <!-- Обложка -->
+    <section class="cover">
+      <div class="overlay"></div>
+
+      <h1 class="cover__title">
+        <span class="aligned-text aligned-text_left">ОНО</span>
+        <span class="aligned-text aligned-text_center">ТЕБЕ</span>
+        <span class="aligned-text aligned-text_left">НАДО</span>
+      </h1>
+
+      <div class="cover__description">
+        <p class="cover__description-text">
+          АУКЦИОН ВЕЩЕЙ, В КОТОРЫЕ НИКТО НЕ ВЕРИЛ
+        </p>
+        <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
+      </div>
+    </section>
+
+    <!-- Лоты -->
+    <section class="lots">
+      <h2 class="lots__heading">ЛОТЫ</h2>
+
+      <ul class="lots__card-list">
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#">
+            <article class="card card_type_film">
+              <h3 class="card__title">ФИЛЬМ РЕЖИССЁРА, КОТОРЫЙ БРОСИЛ КИНОШКОЛУ</h3>
+              <p class="card__text">Не просто бросил, а ушёл с первой лекции.
+                Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+            </article>
+          </a>
+        </li>
+
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#">
+            <article class="card card_type_book">
+              <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+              <p class="card__text">Объёмом почти в тысячу страниц.
+                Иногда без знаков препинания и с переходами на древнеанглийский.
+                В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён.
+                И это всё накладывается на эпическую поэму Гомера.
+                Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+            </article>
+          </a>
+        </li>
+
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#">
+            <article class="card card_type_picture">
+              <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
+                Никаких полей, лесов, котиков...
+                Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+            </article>
+          </a>
+        </li>
+      </ul>
+
+      <a href="#" class="lots__look-more-link">посмотреть больше</a>
+    </section>
+
+    <!--об аукционе-->
+    <section class="about">
+        <div class="about__column">
+            <div class="about__logo">
+                <img
+                src="images/logo-white.svg"
+                alt="Логотип ОНО ТЕБЕ НАДО"
+                class="about__logo-image"
+                >
+            </div>
+        </div>
+        <div class="about__column">
+            <h2 class="about__title">ОБ АУКЦИОНЕ</h2>
+            <div class="about__text">
+                <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
+                    Наши лоты вообще не должны были попасть ни на один аукцион.
+                    Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок?
+                    Кому нужны все эти странные вещи, созданные любителями?</p>
+                    <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
+                        Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру.
+                        Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+            </div>
+        </div>
+    </section>
+  </main>
+
+  <!-- подвал сайта-->
+  <footer class="footer">
+    <address class="address footer__address">
+      <a href="tel:+99995555555">+9 999 555 5555</a>
+      <a href="mailto:infosobaka.ge">infosobaka.ge</a>
+      <p>наб. Принсенграхт 263-265, Амстердам</p>
+    </address>
+
+    <nav class="footer__menu">
+      <ul class="footer__links-list">
+        <li class="footer__links-list-item">
+          <a class="footer__link footer__link-active" href="#">главная</a>
+        </li>
+        <li class="footer__links-list-item">
+          <a class="footer__link" href="#">посмотреть лоты</a>
+        </li>
+        <li class="footer__links-list-item">
+        <a class="footer__link" href="#">об аукционе</a>
+      </li>
+      </ul>
+    </nav>
+
+    <ul class="footer__social-list">
+      <li class="footer__social-list-item">
+        <a href="#" class="footer__social-link">
+          <img src="images/yt.svg" alt="Youtube" class="footer__social-icon">
+        </a>
+      </li>
+      <li class="footer__social-list-item">
+        <a href="#" class="footer__social-link">
+          <img src="images/vk.svg" alt="ВКонтакте" class="footer__social-icon">
+        </a>
+      </li>
+       <li class="footer__social-list-item">
+      <a href="#" class="footer__social-link">
+        <img src="images/pinterest.svg" alt="Pinterest" class="footer__social-icon">
+      </a>
+    </li>
+    </ul>
+  </footer>
+</body>
 </html>
