--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="stylesheet" href="styles/fonts.css">
   <link rel="stylesheet" href="styles/globals.css">
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -15,18 +15,18 @@
     <nav class="header__menu">
       <ul class="header__links-list">
         <li class="header__links-list-item header__links-list-item_no-bullit">
-          <a class="header__link header__link_active">главная</a>
+          <a href="#" class="header__link header__link_active">главная</a>
         </li>
         <li class="header__links-list-item">
-          <a class="header__link">посмотреть лоты</a>
+          <a href="#" class="header__link">посмотреть лоты</a>
         </li>
         <li class="header__links-list-item">
-          <a class="header__link">об аукционе</a>
+          <a href="#" class="header__link">об аукционе</a>
         </li>
       </ul>
     </nav>
 
-    <a class="header__logo">
+    <a href="#" class="header__logo">
       <img src="images/logo.svg" alt="Логотип ОНО ТЕБЕ НАДО" class="header__logo-image">
     </a>
 
@@ -65,8 +65,10 @@
           <a class="card-link" href="#">
             <article class="card card_type_film">
               <h3 class="card__title">ФИЛЬМ РЕЖИССЁРА, КОТОРЫЙ БРОСИЛ КИНОШКОЛУ</h3>
-              <p class="card__text">Не просто бросил, а ушёл с первой лекции.
-                Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              <p class="card__text">
+                Не просто бросил, а ушёл с первой лекции.
+                Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              </p>
             </article>
           </a>
         </li>
@@ -75,11 +77,11 @@
           <a class="card-link" href="#">
             <article class="card card_type_book">
               <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-              <p class="card__text">Объёмом почти в тысячу страниц.
+              <p class="card__text">
+                Объёмом почти в тысячу страниц.
                 Иногда без знаков препинания и с переходами на древнеанглийский.
-                В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён.
-                И это всё накладывается на эпическую поэму Гомера.
-                Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы.
+              </p>
             </article>
           </a>
         </li>
@@ -88,9 +90,10 @@
           <a class="card-link" href="#">
             <article class="card card_type_picture">
               <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
-                Никаких полей, лесов, котиков...
-                Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+              <p class="card__text">
+                Ну действительно, там линия, тут кружочек.
+                Сколько бы вы на такое поставили, если бы не знали, что это — одна из работ Кандинского?
+              </p>
             </article>
           </a>
         </li>
@@ -99,58 +102,56 @@
       <a href="#" class="lots__look-more-link">посмотреть больше</a>
     </section>
 
-    <!--об аукционе-->
+    <!-- Об аукционе -->
     <section class="about">
-        <div class="about__column">
-            <div class="about__logo">
-                <img
-                src="images/logo-white.svg"
-                alt="Логотип ОНО ТЕБЕ НАДО"
-                class="about__logo-image"
-                >
-            </div>
+      <div class="about__column">
+        <div class="about__logo">
+          <img src="images/logo-white.svg" alt="Логотип ОНО ТЕБЕ НАДО" class="about__logo-image">
         </div>
-        <div class="about__column">
-            <h2 class="about__title">ОБ АУКЦИОНЕ</h2>
-            <div class="about__text">
-                <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
-                    Наши лоты вообще не должны были попасть ни на один аукцион.
-                    Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок?
-                    Кому нужны все эти странные вещи, созданные любителями?</p>
-                    <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
-                        Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру.
-                        Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
-            </div>
+      </div>
+
+      <div class="about__column">
+        <h2 class="about__title">ОБ АУКЦИОНЕ</h2>
+        <div class="about__text">
+          <p>
+            Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
+            Наши лоты вообще не должны были попасть ни на один аукцион.
+          </p>
+          <p>
+            Когда в эти вещи не верил никто, продолжали верить их создатели.
+            И сейчас эти лоты стали культовыми.
+          </p>
         </div>
+      </div>
     </section>
   </main>
 
-  <!-- подвал сайта-->
+  <!-- Подвал -->
   <footer class="footer">
     <address class="address footer__address">
       <a href="tel:+99995555555">+9 999 555 5555</a>
-      <a href="mailto:infosobaka.ge">infosobaka.ge</a>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
       <p>наб. Принсенграхт 263-265, Амстердам</p>
     </address>
 
     <nav class="footer__menu">
       <ul class="footer__links-list">
         <li class="footer__links-list-item">
-          <a class="footer__link footer__link-active" href="#">главная</a>
+          <a href="#" class="footer__link footer__link-active">главная</a>
         </li>
         <li class="footer__links-list-item">
-          <a class="footer__link" href="#">посмотреть лоты</a>
+          <a href="#" class="footer__link">посмотреть лоты</a>
         </li>
         <li class="footer__links-list-item">
-        <a class="footer__link" href="#">об аукционе</a>
-      </li>
+          <a href="#" class="footer__link">об аукционе</a>
+        </li>
       </ul>
     </nav>
 
     <ul class="footer__social-list">
       <li class="footer__social-list-item">
         <a href="#" class="footer__social-link">
-          <img src="images/yt.svg" alt="Youtube" class="footer__social-icon">
+          <img src="images/yt.svg" alt="YouTube" class="footer__social-icon">
         </a>
       </li>
       <li class="footer__social-list-item">
@@ -158,11 +159,11 @@
           <img src="images/vk.svg" alt="ВКонтакте" class="footer__social-icon">
         </a>
       </li>
-       <li class="footer__social-list-item">
-      <a href="#" class="footer__social-link">
-        <img src="images/pinterest.svg" alt="Pinterest" class="footer__social-icon">
-      </a>
-    </li>
+      <li class="footer__social-list-item">
+        <a href="#" class="footer__social-link">
+          <img src="images/pinterest.svg" alt="Pinterest" class="footer__social-icon">
+        </a>
+      </li>
     </ul>
   </footer>
 </body>
