--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <title>Оно тебе надо</title>
 
-  <link rel="stylesheet" href="styles/fonts.css">
-  <link rel="stylesheet" href="styles/globals.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="./fonts/fonts.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -15,18 +14,18 @@
     <nav class="header__menu">
       <ul class="header__links-list">
         <li class="header__links-list-item header__links-list-item_no-bullit">
-          <a href="#" class="header__link header__link_active">главная</a>
+          <a class="header__link header__link_active" href="#">главная</a>
         </li>
         <li class="header__links-list-item">
-          <a href="#" class="header__link">посмотреть лоты</a>
+          <a class="header__link" href="#">посмотреть лоты</a>
         </li>
         <li class="header__links-list-item">
-          <a href="#" class="header__link">об аукционе</a>
+          <a class="header__link" href="#">об аукционе</a>
         </li>
       </ul>
     </nav>
 
-    <a href="#" class="header__logo">
+    <a class="header__logo" href="#">
       <img src="images/logo.svg" alt="Логотип ОНО ТЕБЕ НАДО" class="header__logo-image">
     </a>
 
@@ -76,11 +75,14 @@
         <li class="lots__card-list-item">
           <a class="card-link" href="#">
             <article class="card card_type_book">
-              <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+              <h3 class="card__title">
+                Книга, где описан один скучный день из жизни рекламного агента
+              </h3>
               <p class="card__text">
                 Объёмом почти в тысячу страниц.
                 Иногда без знаков препинания и с переходами на древнеанглийский.
                 В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы.
+                Сколько бы вы поставили на «Улисса» Джеймса Джойса?
               </p>
             </article>
           </a>
@@ -89,10 +91,12 @@
         <li class="lots__card-list-item">
           <a class="card-link" href="#">
             <article class="card card_type_picture">
-              <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+              <h3 class="card__title">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+              </h3>
               <p class="card__text">
                 Ну действительно, там линия, тут кружочек.
-                Сколько бы вы на такое поставили, если бы не знали, что это — одна из работ Кандинского?
+                Сколько бы вы на такое поставили, если бы не знали, что это — работа Кандинского?
               </p>
             </article>
           </a>
@@ -106,7 +110,11 @@
     <section class="about">
       <div class="about__column">
         <div class="about__logo">
-          <img src="images/logo-white.svg" alt="Логотип ОНО ТЕБЕ НАДО" class="about__logo-image">
+          <img
+            src="images/logo-white.svg"
+            alt="Логотип ОНО ТЕБЕ НАДО"
+            class="about__logo-image"
+          >
         </div>
       </div>
 
@@ -114,8 +122,8 @@
         <h2 class="about__title">ОБ АУКЦИОНЕ</h2>
         <div class="about__text">
           <p>
-            Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
-            Наши лоты вообще не должны были попасть ни на один аукцион.
+            Здесь вы не встретите пафосное собрание антиквариата.
+            Наши лоты вообще не должны были попасть на аукцион.
           </p>
           <p>
             Когда в эти вещи не верил никто, продолжали верить их создатели.
@@ -137,13 +145,13 @@
     <nav class="footer__menu">
       <ul class="footer__links-list">
         <li class="footer__links-list-item">
-          <a href="#" class="footer__link footer__link-active">главная</a>
+          <a class="footer__link footer__link-active" href="#">главная</a>
         </li>
         <li class="footer__links-list-item">
-          <a href="#" class="footer__link">посмотреть лоты</a>
+          <a class="footer__link" href="#">посмотреть лоты</a>
         </li>
         <li class="footer__links-list-item">
-          <a href="#" class="footer__link">об аукционе</a>
+          <a class="footer__link" href="#">об аукционе</a>
         </li>
       </ul>
     </nav>
