--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
   <link rel="stylesheet" href="./fonts/fonts.css">
   <link rel="stylesheet" href="./styles/style.css">
-
 </head>
 
 <body>
@@ -27,7 +26,7 @@
     </nav>
 
     <a class="header__logo" href="#">
-      <img src="images/logo.svg" alt="Логотип ОНО ТЕБЕ НАДО" class="header__logo-image">
+      <img src="./images/logo-black.svg" alt="Логотип ОНО ТЕБЕ НАДО" class="header__logo-image">
     </a>
 
     <address class="address header__address">
@@ -45,14 +44,14 @@
       <h1 class="cover__title">
         <span class="aligned-text aligned-text_left">ОНО</span>
         <span class="aligned-text aligned-text_center">ТЕБЕ</span>
-        <span class="aligned-text aligned-text_left">НАДО</span>
+        <span class="aligned-text aligned-text_right">НАДО</span>
       </h1>
 
       <div class="cover__description">
         <p class="cover__description-text">
           АУКЦИОН ВЕЩЕЙ, В КОТОРЫЕ НИКТО НЕ ВЕРИЛ
         </p>
-        <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
+        <button type="button" class="bet-button">Сделать ставку</button>
       </div>
     </section>
 
@@ -77,13 +76,10 @@
           <a class="card-link" href="#">
             <article class="card card_type_book">
               <h3 class="card__title">
-                Книга, где описан один скучный день из жизни рекламного агента
+                КНИГА, ГДЕ ОПИСАН ОДИН СКУЧНЫЙ ДЕНЬ ИЗ ЖИЗНИ РЕКЛАМНОГО АГЕНТА
               </h3>
               <p class="card__text">
-                Объёмом почти в тысячу страниц.
-                Иногда без знаков препинания и с переходами на древнеанглийский.
-                В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы.
-                Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
               </p>
             </article>
           </a>
@@ -93,7 +89,7 @@
           <a class="card-link" href="#">
             <article class="card card_type_picture">
               <h3 class="card__title">
-                Картина, которую повторит даже 5-летний сын маминой подруги
+                КАРТИНА, КОТОРУЮ ПОВТОРИТ ДАЖЕ 5-ЛЕТНИЙ СЫН МАМИНОЙ ПОДРУГИ
               </h3>
               <p class="card__text">
                 Ну действительно, там линия, тут кружочек.
@@ -112,7 +108,7 @@
       <div class="about__column">
         <div class="about__logo">
           <img
-            src="images/logo-white.svg"
+            src="./images/logo-white.svg"
             alt="Логотип ОНО ТЕБЕ НАДО"
             class="about__logo-image"
           >
@@ -123,12 +119,11 @@
         <h2 class="about__title">ОБ АУКЦИОНЕ</h2>
         <div class="about__text">
           <p>
-            Здесь вы не встретите пафосное собрание антиквариата.
-            Наши лоты вообще не должны были попасть на аукцион.
+            Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
           </p>
           <p>
-            Когда в эти вещи не верил никто, продолжали верить их создатели.
-            И сейчас эти лоты стали культовыми.
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
           </p>
         </div>
       </div>
@@ -160,17 +155,17 @@
     <ul class="footer__social-list">
       <li class="footer__social-list-item">
         <a href="#" class="footer__social-link">
-          <img src="images/yt.svg" alt="YouTube" class="footer__social-icon">
+          <img src="./images/yt.svg" alt="YouTube" class="footer__social-icon">
         </a>
       </li>
       <li class="footer__social-list-item">
         <a href="#" class="footer__social-link">
-          <img src="images/vk.svg" alt="ВКонтакте" class="footer__social-icon">
+          <img src="./images/vk.svg" alt="ВКонтакте" class="footer__social-icon">
         </a>
       </li>
       <li class="footer__social-list-item">
         <a href="#" class="footer__social-link">
-          <img src="images/pinterest.svg" alt="Pinterest" class="footer__social-icon">
+          <img src="./images/pinterest.svg" alt="Pinterest" class="footer__social-icon">
         </a>
       </li>
     </ul>
