--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div class="page">
   <!-- Шапка -->
   <header class="header">
     <nav class="header__menu">
@@ -170,5 +171,6 @@
       </li>
     </ul>
   </footer>
+  </div>
 </body>
 </html>
