Исправлен порядок подключения шрифтов

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Оно тебе надо</title>
 
-  <link rel="stylesheet" href="styles/style.css">
-</head>
+  <!-- СНАЧАЛА шрифты -->
+  <link rel="stylesheet" href="./fonts/fonts.css">
 
+  <!-- ПОТОМ основные стили -->
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
 
 <body>
   <div class="page">
