Исправлен порядок подключения шрифтов

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <title>Оно тебе надо</title>
 
-  <!-- СНАЧАЛА шрифты -->
+  <!-- 1. СНАЧАЛА ШРИФТЫ -->
   <link rel="stylesheet" href="./fonts/fonts.css">
 
-  <!-- ПОТОМ основные стили -->
+  <!-- 2. ПОТОМ ОСНОВНЫЕ СТИЛИ -->
   <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 
 <body>
   <div class="page">
