fix: restore global.css and correct styles order

--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
   <meta charset="UTF-8">
   <title>Оно тебе надо</title>
 
-  <!-- 1. СНАЧАЛА ШРИФТЫ -->
   <link rel="stylesheet" href="./fonts/fonts.css">
-
-  <!-- 2. ПОТОМ ОСНОВНЫЕ СТИЛИ -->
+  <link rel="stylesheet" href="./styles/global.css">
   <link rel="stylesheet" href="./styles/style.css">
 </head>
-
 
 <body>
   <div class="page">
