--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1"> <!--добавил для того чтобы была корректная адаптивность на мобильных устройствах-->
   <title>Оно тебе надо</title>
 
   <link rel="stylesheet" href="./fonts/fonts.css">
@@ -15,7 +16,7 @@
   <header class="header">
     <nav class="header__menu">
       <ul class="header__links-list">
-        <li class="header__links-list-item header__links-list-item_no-bullit">
+        <li class="header__links-list-item header__links-list-item_no-bullet">
           <a class="header__link header__link_active" href="#">главная</a>
         </li>
         <li class="header__links-list-item">
