--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <address class="address header__address">
       <a href="tel:+99995555555">+9 999 555 5555</a>
       <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-      <p>наб. Принсенграхт 263-265, Амстердам</p>
+      <p>наб. Принсенграхт 263-265,Амстердам</p>
     </address>
   </header>
 
@@ -47,6 +47,7 @@
         <span class="aligned-text aligned-text_left">ОНО</span>
         <span class="aligned-text aligned-text_center">ТЕБЕ</span>
         <span class="aligned-text aligned-text_right">НАДО</span>
+
       </h1>
 
       <div class="cover__description">
@@ -94,8 +95,7 @@
                 КАРТИНА, КОТОРУЮ ПОВТОРИТ ДАЖЕ 5-ЛЕТНИЙ СЫН МАМИНОЙ ПОДРУГИ
               </h3>
               <p class="card__text">
-                Ну действительно, там линия, тут кружочек.
-                Сколько бы вы на такое поставили, если бы не знали, что это — работа Кандинского?
+                Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
               </p>
             </article>
           </a>
