--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
       <div class="overlay"></div>
 
       <h1 class="cover__title">
-        <span class="aligned-text aligned-text_left">ОНО</span>
-        <span class="aligned-text aligned-text_center">ТЕБЕ</span>
-        <span class="aligned-text aligned-text_right">НАДО</span>
-
+         <span class="aligned-text letter-spacing-extended">ОНО</span>
+  <span class="aligned-text aligned-text_center">ТЕБЕ</span>
+  <span class="aligned-text aligned-text_right">
+    НАД<span class="no-letter-spacing">О</span>
+  </span>
       </h1>
 
       <div class="cover__description">
